clang/test/BSC/Negative/Ownership/ArrayElem/arrayelem_typedef_redecl_mismatch/arrayelem_typedef_redecl_mismatch.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

typedef int *IP;

void bad(IP _Borrow p); // expected-note {{previous declaration is here}}
void bad(int *_Borrow _ArrayElem p); // expected-error {{conflicting types for 'bad'}}
